--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Monkeys</title>
     <script src="JS/p5.js"></script>
     <script src="JS/script.js" defer></script>
-    <style>main{width:100vw;height:100vh;}</style>
+    <style>main{width:100vw;height:100vh;}*{user-select:none;}</style>
 </head>
 <body style="margin:0;overflow:hidden">
     <button style="position:absolute;cursor:pointer;appearance:none;background-color:transparent;border:none;">⏸️</button>
